--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <!--
-  ~  Copyright (c) 2016.. Self Training Systems, Inc - All Rights Reserved
-  ~  Unauthorized copying of this file, via any medium is strictly prohibited
-  ~  Proprietary and confidential
-  ~  Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
+  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
+  ~ Unauthorized copying of this file, via any medium is strictly prohibited
+  ~ Proprietary and confidential
+  ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
   -->
 
 <resources>
     <string name="app_name">FlicksProject</string>
+    <string name="text_title">TextTitle</string>
+    <string name="text_overview">FlicksOverViewZXCVBNMASDFGHJKLQWERTYUIOPZXCVBNMZXCVBNMASDFGHJKLQWERTYUIOPZXCVBNMZXCVBNMASDFGHJKLQWERTYUIOPZXCVBNM</string>
 </resources>
