--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -6,5 +6,17 @@
   -->
 
 <resources>
-    <string name="app_name">FlicksProject</string>
+    <string name="app_name"> Dự án Flicks</string>
+    <string name="text_title"> TextTitle </string>
+    <string name="RELEASE_DATE"> Ngày phát hành: </string>
+    <string name="text_empty_list"> Không có dữ liệu </string>
+    <string name="text_empty_list_by_connection_issue"> Lỗi Kết nối </string>
+    <string name="hello_world"> Xin chào thế giới! </string>
+    <string name="action_settings"> Cài đặt </string>
+    <string name="player_error"> Lỗi khởi phát của YouTube </string>
+    <string name="seek_to"> Jump To </string>
+    <string name="seek_to_hint"> Giây </string>
+    <string name="video_load_error">Video Lỗi</string>
+    <string name="connection_error_title"> NO CONNECTION </string>
+    <string name="connection_error_message"> Không có kết nối Internet. Xin vui lòng đến thiết lập! </string>
 </resources>
