--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,19 @@
   -->
 
 <resources>
-    <string name="app_name">FlicksProject</string>
+    <string name="app_name">Flicks Project</string>
     <string name="text_title">TextTitle</string>
     <string name="text_overview">FlicksOverViewZXCVBNMASDFGHJKLQWERTYUIOPZXCVBNMZXCVBNMASDFGHJKLQWERTYUIOPZXCVBNMZXCVBNMASDFGHJKLQWERTYUIOPZXCVBNM</string>
     <string name="release_date">Release Date:</string>
     <string name="text_release_date">2016-09-14</string>
     <string name="text_empty_list">Empty Data</string>
     <string name="text_empty_list_by_connection_issue">Connection Issue</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="player_error">Error initializing YouTube player</string>
+    <string name="seek_to">Jump To</string>
+    <string name="seek_to_hint">Seconds</string>
+    <string name="video_load_error">Video Loading Error</string>
+    <string name="connection_error_title">NO CONNECTION</string>
+    <string name="connection_error_message">There is no Internet connection. Please go to setting!</string>
 </resources>
